# cbadc

./: .dockerignore  .env  .gitignore  .gitmodules  .gitpod.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  DE_Paddys_SRS_360_measurements (1) (1).ipynb  Dockerfile  MANIFEST.in  README.md  analog_frontend.vams  build.sh  chain_of_integrators.v.vams  comparator.vams  digital_control.vams  meta.yaml  pyproject.toml  pytest-doctests.xml  pytest-unitests.xml  pytest-unittests.xml  requirements.txt  setup.cfg  setup.py  test_observer.vams  testbench  testbench1  testbench2  tox.ini  verilog_debug_testbench.txt
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-manylinux.yml  circuit_test.yml  commit.yml  develop.yml  develop_pull_request.yml  docker_build.yml  docker_develop.yml  docker_main.yml  docs.yml  doctest.yml  lint.yml  lint_doc_and_unittest.yml  linting.yml  master_and_develop.yml  master_pull_request.yml  performance_validation.yml  pull_request.yml  pypi-deployment.yml  python-package.yml  testing.yml  unit-test.yml  unittest.yml
benchmark/test_estimators/: estimation_test.py  filter_computation_test.py
benchmark/test_simulator/: pre_simulation_test.py  simulation_test.py
cbc/: __init__.py  __init__.pyx  analog_system.py  analog_system.pyx  digital_control.py  input.py  offline_computations.py  offline_computations.pyx  simulator.py  simulator.pyx
cbc/analog_system/: analog_system.pyx
dataset_generation/: chain_of_integrators.py  chain_of_integrators.yml
docker/: Dockerfile  install_ngspice.sh
docker/dev/: Dockerfile  fix-permissions.sh
docs/: index.html  requirements.txt
docs/code_examples/: README.rst  plot_stf_and_ntf.py
docs/datasets/: README.rst  plot_hadamard.py
docs/simulations/: README.rst  plot_hadamard.py
docs/source/: MASH_delta_sigma.rst  Untitled.ipynb  analogSignal.rst  analogSystem.rst  analog_system.rst  conf.py  control-bounded_converters.rst  digitalControl.rst  digitalEstimator.rst  digital_control.rst  digital_estimator.rst  index.rst  old.rst  requirements.txt  terminology.rst
docsrc/: AnalogToDigital
docsrc/source/: analogSignal.rst  analogSystem.rst  api.rst  chain-of-integrators.rst  comparing_estimators.rst  conf.py  control-bounded_converters.rst  digitalControl.rst  index.rst  leap-frog.rst
notebooks/: calibrate_a_leapfrog_ADC.ipynb  offline_calibration_example.ipynb
src/cbadc/: __init__.py  __version__.py  analog_frontend.py  analog_signal.c  analog_signal.pxd  analog_signal.py  analog_signal.pyx  analog_system.c  analog_system.pxd  analog_system.py  analog_system.pyx  digital_calibration.py  digital_control.c  digital_control.pxd  digital_control.py  digital_control.pyx  digital_estimator.c  digital_estimator.cpp  digital_estimator.py  digital_estimator.pyx  figures_of_merit.py  filter.cpp  filter_mid_point.c  filter_mid_point.pxd  filter_mid_point.pyx  fom.py  linear_filter.c  linear_filter.pxd  linear_filter.pyx  observer.py  offline_computations.c  offline_computations.pyx  parallel_digital_estimator.cpp  parallel_digital_estimator.pxd  parallel_digital_estimator.pyx  parallel_digital_estimator_filter.cpp  parallel_filter.cpp  parallel_filter.pxd  parallel_filter.pxd_old  parallel_filter.pyx  (+11 more)
src/cbc/: __init__.py  analog_signal.c  analog_signal.pxd  analog_signal.pyx  analog_system.c  analog_system.pxd  analog_system.pyx  digital_control.c  digital_control.pxd  digital_control.pyx  digital_estimator.c  digital_estimator.pyx  filter_mid_point.c  filter_mid_point.pxd  filter_mid_point.pyx  linear_filter.c  linear_filter.pxd  linear_filter.pyx  offline_computations.c  offline_computations.pyx  simulator.c  state_space_simulator.c  state_space_simulator.pyx
test_bench/: analog_frontend.vams  this_file
tests/: AnalogToDigital  dummy.py
tests/analog_system/: chain_of_integrators.py  constructor_test.py  derivative_test.py  transfer_functions_test.py
tests/benchmark/: evaluation_test.py
tests/cadence_validation/: observations.csv  python_simulator_circuit_level_test.py  testbench_test.py  verilog-ams_test.py  verilog_debug.py
tests/circuits/: __init__.py  test_behavorial_models.py  test_cmos.py  test_comparator.py  test_global_control.py  test_lc_tank.py  (+7 more)
(+885 files in other folders)
