[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"



[project.optional-dependencies]
tests = ['pytest', 'pytest-benchmark', 'pytest-cov']
docs = ['sphinx_rtd_theme', 'nbsphinx', 'sphinx-gallery']

dependencies = [
    'numpy>=1.20.1','scipy>=1.6.3','tqdm>=4.61.0'
]

[tool]
[tool.pyright]
include = ["src/cbadc"]
[tool.flake8]
ignore = "W605"
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]