[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"



[project.optional-dependencies]
tests = ['pytest', 'pytest-benchmark', 'pytest-cov','pytest-parallel']
docs = ['sphinx_rtd_theme', 'nbsphinx', 'sphinx-gallery']

dependencies = [
    'numpy>=1.20.1','scipy>=1.6.3','tqdm>=4.61.0'
]

[tool]
[tool.black]
skip-string-normalization = true
