[metadata]
name = cbadc
version = 0.1.0
author = Hampus Malmberg
author_email = hampus.malmberg88@gmail.com
description = A toolbox for simulating control-bounded converters.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hammal/cbadc
project_urls =
    Bug Tracker = https://github.com/hammal/cbadc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = numpy>=1.20.1; scipy>=1.7.1; tqdm>=4.61.0; requests>=2.25.1; pytest; pytest-benchmark; pytest-cov; tox; typing-extensions

[options.packages.find]
where = src