[metadata]
name = cbadc
version = 0.1.5
author = Hampus Malmberg
author_email = hampus.malmberg88@gmail.com
description = A toolbox for simulating control-bounded converters.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hammal/cbadc
project_urls =
    Bug Tracker = https://github.com/hammal/cbadc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = numpy>=1.20.1; scipy>=1.7.1; tqdm>=4.61.0; requests>=2.25.1; pytest; pytest-benchmark; pytest-cov; tox; typing-extensions; pandas>=1.3.4; matplotlib>=3.4.3; xlrd >= 1.0.0; sympy >=1.9; mpmath >= 1.1; jinja2 >= 2.11; pre-commit >= 2.17.0;

[options.packages.find]
where = src

[flake8]
ignore =
    E501,
    W605,
    E203,
    F401,
    E402,
    W503,
    BLK100,
    E741,
    E712,
    F811
exclude =
    jupyter,
    build,
    docs/build,
    .git,
    __pycache__,
    docs/source/conf.py
    .tox
max-line-length = 88
