[metadata]
name = cbadc
version = 0.3.0
author = Hampus Malmberg
author_email = hampus.malmberg88@gmail.com
description = A toolbox for simulating control-bounded converters.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hammal/cbadc
project_urls =
    Bug Tracker = https://github.com/hammal/cbadc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
zip_safe = true
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires = file: requirements.txt
include_package_data = True

[options.packages.find]
where = src


[flake8]
ignore =
    E501,
    W605,
    E203,
    F401,
    E402,
    W503,
    BLK100,
    E741,
    E712,
    F811
exclude =
    build,
    docs/build,
    .git,
    __pycache__,
    docs/source/conf.py,
    *.vams,
    .tox,
max-line-length = 88
